[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/menu/loadGame/LoadGame.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Schrödinger.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/menu/loadGame/Confirm.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/loadGame/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/music/menu/load/Loop_The_Old_Tower_Inn.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[node name="LoadGame" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.054902, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 25.0
margin_right = 251.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "CARGAR PARTIDA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="UI/Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -80.0
margin_right = -63.0
margin_bottom = -41.0
custom_fonts/font = SubResource( 4 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="UI/Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -80.0
margin_right = 177.0
margin_bottom = -41.0
custom_fonts/font = SubResource( 6 )
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" parent="UI/Background" instance=ExtResource( 4 )]
margin_left = 32.0
margin_top = 72.0
margin_right = -32.0
margin_bottom = -96.0

[node name="Confirm" type="Popup" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -116.0
margin_right = 296.0
margin_bottom = 148.0
script = ExtResource( 3 )

[node name="Marco" type="ColorRect" parent="UI/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="UI/Confirm/Marco"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
color = Color( 0.294118, 0.490196, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Confirm/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_top = 16.0
margin_right = 164.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 8 )
text = "CONFIRMAR PARTIDA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameData" type="Label" parent="UI/Confirm/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -286.5
margin_top = 100.0
margin_right = 289.5
margin_bottom = 215.0
custom_fonts/font = SubResource( 9 )
text = "lasdflf
eamfa"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="UI/Confirm/Marco/Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -185.0
margin_top = -64.0
margin_right = -40.0001
margin_bottom = -25.0
custom_fonts/font = SubResource( 10 )
text = "Aceptar"

[node name="Cancel" type="Button" parent="UI/Confirm/Marco/Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -64.0
margin_right = 191.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 11 )
text = "Cancelar"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true

[connection signal="dataLoaded" from="." to="UI/Background/Table" method="_on_LoadGame_dataLoaded"]
[connection signal="pressed" from="UI/Background/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="UI/Background/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="selected" from="UI/Background/Table" to="." method="_on_Table_selected"]
[connection signal="pressed" from="UI/Confirm/Marco/Background/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="UI/Confirm/Marco/Background/Cancel" to="UI/Confirm" method="_on_Cancel_pressed"]
